// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`People Polkadot Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Polkadot Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Polkadot Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Polkadot Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Polkadot Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Polkadot Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Dave rejects the announced call 1`] = `[]`;

exports[`People Polkadot Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "15nZbCKW1B93r1N8ujsbZA1jrGhn98zb7f8NMzt8T9h5LU9H",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Polkadot Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "12eUtnNZ7DazknnqPeHtpXKyEr9R1GBWkQj1Hmdyj4W3DM5f",
      "callHash": "(hash)",
      "multisig": "15nZbCKW1B93r1N8ujsbZA1jrGhn98zb7f8NMzt8T9h5LU9H",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Polkadot Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "14tcsxxKnj2rcXsE1F6agPetVvbGVHqnisaHfE5g8KPwHCEo",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Polkadot Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "16WT4XaBMsZkBiGzTjb1t1dGm9EywRAtRB7tM9W4zZuoHrGP",
      "callHash": "(hash)",
      "multisig": "14tcsxxKnj2rcXsE1F6agPetVvbGVHqnisaHfE5g8KPwHCEo",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Polkadot Multisig Proxy > success tests > 2-of-3 multisig with pure proxy multisig > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "15vMkxdHARZaJnKeA56PBj7j418MebVkWXak3z7PDu2umvWH",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Polkadot Multisig Proxy > success tests > Cancel 2-of-3 multisig with pure proxy before any other approvals > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "15Xo3aia1T3SCVRyfa49Bd3eNxGa4XWD2Te9ugFitFkGGm2K",
      "callHash": "(hash)",
      "multisig": "13e4kuNjoUpfTitPuqbrgyL9ZgYfvcADFTp7tQ344YudrFWZ",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;
